deployments/paperless-ngx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-webserver
  namespace: paperless
spec:
  selector:
    app: paperless-webserver
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
