deployments/paperless-ngx/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ingress
  namespace: paperless
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`paperless.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: paperless-webserver
          port: 8000
  tls:
    secretName: local-tigovanroy-space-production-tls
